<resources>
    <string name="app_name">Events24</string>
    <string name="login_description_text_2">Whether you enjoy city breaks or extended holidays in the sun, you can always improve your travel experiences by staying in a small.</string>
    <string name="login_description_text_1">Online tickets for everything you want!</string>
    <string name="button_login">Login</string>
    <string name="button_registration">Register</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="repeat_password">Repeat password</string>
    <string name="text_registration_success">Registration complete!</string>
    <string name="text_registration_failed">Registration failed, try again!</string>
    <string name="text_check_email">Check your email!</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="show_more">Show more</string>
    <string name="hint_search">Search</string>
    <string name="button_log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="select_picture">Select Picture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="send_to_email">Send to email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="help_centre">Help centre</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="top_events">Top events</string>
    <string name="concerts">Concerts</string>
    <string name="theatre">Theatre</string>
    <string name="sport">Sport</string>
    <string name="dialog_pick_image_title">Pick image</string>
    <string name="dialog_pick_image_message">Please, select image destination</string>
    <string name="dialog_pick_image_gallery">Gallery</string>
    <string name="dialog_pick_image_camera">Camera</string>
    <string name="dialog_permission_title">Permission needed</string>
    <string name="dialog_permission_storage_message">This permission is required if you want to access your storage.</string>
    <string name="dialog_permission_camera_message">This permission is required if you want to access your camera.</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="toast_user_successfully_uploaded">Profile info successfully uploaded.</string>
    <string name="concert">KONCERT</string>
    <string name="ticket">Ticket</string>
    <string name="pictures_and_video">Pictures and videos</string>
    <string name="about_artist">About artist</string>
    <string name="News">News</string>


    <string-array name="app_languages">
        <item>English</item>
        <item>Serbian</item>
    </string-array>
    <string-array name="app_languages_string">
        <item>English</item>
        <item>Serbian</item>
    </string-array>
</resources>