<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    android:orientation="vertical"

    tools:context=".ui.activity.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="32dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person" />

            </androidx.cardview.widget.CardView>

            <com.lucic.cubes.events24.ui.view.CustomEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/name"
                android:inputType="text" />

            <com.lucic.cubes.events24.ui.view.CustomEditText
                android:id="@+id/editTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/surname"
                android:inputType="text" />


            <com.lucic.cubes.events24.ui.view.CustomEditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/address"
                android:inputType="text" />

            <com.lucic.cubes.events24.ui.view.CustomEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/phone"
                android:inputType="text" />

            <com.lucic.cubes.events24.ui.view.CustomEditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/city"
                android:inputType="text" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonEditUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_stroke_background"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>