<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    tools:context=".ui.fragment.ProfileFragment">

    <ScrollView
        android:id="@+id/scrollView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLogout"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_biggest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardViewImage"
                app:layout_constraintTop_toTopOf="@+id/cardViewImage" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/purple_light"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="@id/cardViewImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardViewImage"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_biggest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewImage" />

            <TextView
                android:id="@+id/textViewNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/notifications"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSettings" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewNotifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewNotifications" />


            <TextView
                android:id="@+id/textViewLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewNotifications" />

            <TextView
                android:id="@+id/buttonLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:textColor="@color/pink"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/textViewLanguage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewLanguage" />

            <TextView
                android:id="@+id/textViewSupport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/support"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_biggest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLanguage" />

            <TextView
                android:id="@+id/textViewHelpCentre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                android:text="@string/help_centre"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSupport" />

            <ImageView
                android:id="@+id/imageViewArrowHelpCentre"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@id/textViewHelpCentre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewHelpCentre"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textViewTermsAndConditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                android:text="@string/terms_and_conditions"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewHelpCentre" />


            <ImageView
                android:id="@+id/imageViewArrowTermsAndConditions"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@id/textViewTermsAndConditions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewTermsAndConditions"
                app:tint="@color/white" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_stroke_background"
        android:text="@string/button_log_out"
        android:textSize="@dimen/text_size_normal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>